testsuite/tests/rename/should_fail/T4042.stderr

T4042.hs:6:1: Parse error: naked expression at top level
